force-app/main/default/objects/Order_Coupon__c/Order_Coupon__c.object-meta.xml
<CustomObject>
    <label>Order Coupon (Old)</label>
    <nameField>
        <displayFormat>OC{00000000}</displayFormat>
        <label>Order Coupon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Coupons (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>