force-app/main/default/objects/Order_Coupon__c/fields/coupon__c.field-meta.xml
<CustomField>
    <fullName>coupon__c</fullName>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Check Coupon status &amp; Coupon type</errorMessage>
        <filterItems>
            <field>coupon__c.Status__c</field>
            <operation>equals</operation>
            <value>Enabled</value>
        </filterItems>
        <filterItems>
            <field>coupon__c.type__c</field>
            <operation>notEqual</operation>
            <value>Airline, Exclusives</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>Orders Coupons</relationshipLabel>
    <relationshipName>Orders_Coupons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>