force-app/main/default/objects/Order_Coupon__c/fields/Coupon_Description__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Description__c</fullName>
    <formula>TEXT(coupon__r.OriginalOrder__r.CVC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Order CVC</label>
    <type>Text</type>
</CustomField>