force-app/main/default/objects/Order_Coupon__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Orders Coupons</relationshipLabel>
    <relationshipName>Orders_Coupons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>