force-app/main/default/objects/Order_Coupon__c/fields/Process_CD__c.field-meta.xml
<CustomField>
    <fullName>Process_CD__c</fullName>
    <formula>And(
total_discounts__c &lt;&gt;0,
text(ff_Coupon_Type__c) = &quot;Discount&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CD</label>
    <type>Checkbox</type>
</CustomField>