force-app/main/default/objects/Order_Coupon__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <formula>order__r.time_confirmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>DateTime</type>
</CustomField>