force-app/main/default/objects/Order_Coupon__c/validationRules/Coupon_for_Deal.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_for_Deal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( coupon__r.Deal__c )), 
coupon__r.Deal__c &lt;&gt; order__r.deal__c,
TEXT(coupon__r.Deal_Promotion__c) &lt;&gt; &quot;NRMA&quot;
)</errorConditionFormula>
    <errorMessage>This coupon is to be applied with the deal specified on the coupon.</errorMessage>
</ValidationRule>